# Alfredo-Memory-Agent

./: CHANGELOG.md  HISTORY.md  INTEGRATION.md  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  PROVENANCE.md
docs/superpowers/specs/: 2026-07-13-alfredo-adoption-distribution-design.md
examples/: demo_basic.py  demo_hackathon.py  demo_lifecycle.py
src/memory_agent/: __init__.py  benchmark.py  models.py  ports.py
src/memory_agent/agent/: decision.py  orchestrator.py
src/memory_agent/cli/: commands.py  onboarding.py
src/memory_agent/core/: capabilities.py  config.py  consolidation.py  context_budget.py  deterministic_embeddings.py  embeddings.py  episodes.py  evolution.py  memory_store.py  paths.py  relations.py  retrieval.py  task_memory.py  user_config.py
src/memory_agent/integrations/: llm_connector.py  markdown_export.py  mcp_clients.py  mcp_server.py
tests/: test_agent.py  test_ci_release_contract.py  test_cli_quickstart.py  test_consolidation.py  test_context_budget.py  test_deterministic_embeddings.py  test_documentation_commands.py  test_episodic_consolidation.py  test_llm_connector.py  test_llm_history_contract.py  test_markdown_export.py  test_mcp_boundary_contract.py  test_mcp_http_contract.py  test_mcp_onboarding.py  test_memory_store.py  test_package_metadata.py  test_paths.py  test_readme_contract.py  test_retrieval.py  test_retrieval_explainability.py  test_task_memory.py
